Set moving to be at regular downsampled resolution

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 70,
    "id": "2c6d0e92",
    "metadata": {},
    "outputs": [
@@ -359,28 +359,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "ed760be0",
+   "execution_count": 71,
+   "id": "fed2df63",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.9513378941293442,\n",
-       " 0.10081010685825635,\n",
-       " 0.021425821234862266,\n",
-       " -0.0731772113785215,\n",
-       " 0.9074205026148587,\n",
-       " -0.04519962555198247,\n",
-       " -0.007890964253193659,\n",
-       " 0.060355795584759744,\n",
-       " 0.9443613268111726,\n",
-       " 4577.995544758792,\n",
-       " 3392.1664049586807,\n",
-       " -803.6829635483717)"
+       "(0.952070594041666,\n",
+       " 0.1002314406368558,\n",
+       " 0.022805375731877135,\n",
+       " -0.07193116280276211,\n",
+       " 0.9086333851964066,\n",
+       " -0.04365227305089499,\n",
+       " -0.009807044976670185,\n",
+       " 0.058634539840404905,\n",
+       " 0.9446668396549776,\n",
+       " 183.14303944656933,\n",
+       " 135.8673886573124,\n",
+       " -32.2520966291435)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,20 +391,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "0fe99f86",
+   "execution_count": 72,
+   "id": "2f783c00",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 9.50000e-01,  1.00000e-01,  2.00000e-02,  4.57800e+03],\n",
-       "       [-7.00000e-02,  9.10000e-01, -5.00000e-02,  3.39217e+03],\n",
-       "       [-1.00000e-02,  6.00000e-02,  9.40000e-01, -8.03680e+02],\n",
-       "       [ 0.00000e+00,  0.00000e+00,  0.00000e+00,  1.00000e+00]])"
+       "array([[ 9.5000e-01,  1.0000e-01,  2.0000e-02,  1.8314e+02],\n",
+       "       [-7.0000e-02,  9.1000e-01, -4.0000e-02,  1.3587e+02],\n",
+       "       [-1.0000e-02,  6.0000e-02,  9.4000e-01, -3.2250e+01],\n",
+       "       [ 0.0000e+00,  0.0000e+00,  0.0000e+00,  1.0000e+00]])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 77,
    "id": "ff4ead20",
    "metadata": {},
    "outputs": [
@@ -424,24 +424,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moving physical (µm) = (9125.0, 6375.0, 2350.0)\n",
-      "fixed physical (µm) = [7442. 7491. 2436.]\n",
-      "moved to fixed space 25.0um (298, 300, 97)\n"
+      "moving physical (µm) = (9112.025, 8447.4, 2440)\n",
+      "fixed physical (µm) = [9753. 7104. 2683.]\n",
+      "moved to fixed space 25.0um (390, 284, 107)\n"
      ]
     }
    ],
    "source": [
+    "# goal is 271, 300, 97\n",
     "#This works!\n",
     "# user values\n",
-    "moving_index = (365, 255, 94)\n",
-    "moving_spacing = (um, um, um)   # µm\n",
+    "moving_index = (28037,25992,122)\n",
+    "moving_spacing = (0.325, 0.325, 20)   # µm\n",
     "\n",
     "# put them into microns\n",
     "phys_moving = (moving_index[0]*moving_spacing[0],\n",
     "               moving_index[1]*moving_spacing[1],\n",
     "               moving_index[2]*moving_spacing[2])\n",
     "print(\"moving physical (µm) =\", phys_moving)\n",
-    "phys_fixed = sitk_transform.GetInverse().TransformPoint(phys_moving)\n",
+    "phys_fixed = sitk_transform.TransformPoint(phys_moving)\n",
     "print(\"fixed physical (µm) =\", np.round(phys_fixed))\n",
     "fixed_index = fixed.TransformPhysicalPointToIndex(phys_fixed)\n",
     "print(f'moved to fixed space {um}um {fixed_index}')\n"
@@ -449,26 +450,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "b64cb85b",
+   "execution_count": 73,
+   "id": "0055ea6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9125.0, 6375.0, 2350.0)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phys_moving"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "02a11f17",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "phys fixed (4770.5216014316875, 4976.411208108028, -615.2729119730598)\n"
+      "phys fixed (9555.593220786439, 5223.756026490796, 2476.476446759871)\n",
+      "fixed_index: (382, 209, 99)\n"
      ]
     }
    ],
    "source": [
     "# fiducial points from the moving brain\n",
-    "scaled = [[phys_moving[0]/25, phys_moving[1]/25, phys_moving[2]/25]]\n",
-    "for phys_m in scaled:\n",
+    "for phys_m in [phys_moving]:\n",
     "    phys_f = sitk_transform.TransformPoint(phys_m)\n",
-    "    #idx_f = fixed.TransformPhysicalPointToIndex(phys_f)\n",
+    "    idx_f = fixed.TransformPhysicalPointToIndex(phys_f)\n",
     "    print(\"phys fixed\", phys_f)\n",
-    "    #print(\"fixed_index:\", idx_f)\n"
+    "    print(\"fixed_index:\", idx_f)\n"
    ]
   },
   {
@@ -507,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "88907c65",
+   "id": "01063816",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "a3a66cd6",
+   "id": "739c84e4",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "26c4214b",
+   "id": "eaefe5d1",
    "metadata": {},
    "outputs": [
     {
