Kept spacing intact

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 78,
    "id": "2c6d0e92",
    "metadata": {},
    "outputs": [
@@ -359,28 +359,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "fed2df63",
+   "execution_count": 79,
+   "id": "44710277",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.952070594041666,\n",
-       " 0.1002314406368558,\n",
-       " 0.022805375731877135,\n",
-       " -0.07193116280276211,\n",
-       " 0.9086333851964066,\n",
-       " -0.04365227305089499,\n",
-       " -0.009807044976670185,\n",
-       " 0.058634539840404905,\n",
-       " 0.9446668396549776,\n",
-       " 183.14303944656933,\n",
-       " 135.8673886573124,\n",
-       " -32.2520966291435)"
+       "(2.2824079364698022,\n",
+       " 0.2117687428639336,\n",
+       " 0.06964893641226165,\n",
+       " -0.1576682158101946,\n",
+       " 2.198563605542702,\n",
+       " -0.11341482445362042,\n",
+       " 0.011176211900279023,\n",
+       " 0.09673572000392482,\n",
+       " 1.1313793308977536,\n",
+       " 951.431096094167,\n",
+       " 605.9974444399264,\n",
+       " -24.041290171400945)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,20 +391,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "2f783c00",
+   "execution_count": 80,
+   "id": "9bb114a1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 9.5000e-01,  1.0000e-01,  2.0000e-02,  1.8314e+02],\n",
-       "       [-7.0000e-02,  9.1000e-01, -4.0000e-02,  1.3587e+02],\n",
-       "       [-1.0000e-02,  6.0000e-02,  9.4000e-01, -3.2250e+01],\n",
+       "array([[ 2.2800e+00,  2.1000e-01,  7.0000e-02,  9.5143e+02],\n",
+       "       [-1.6000e-01,  2.2000e+00, -1.1000e-01,  6.0600e+02],\n",
+       "       [ 1.0000e-02,  1.0000e-01,  1.1300e+00, -2.4040e+01],\n",
        "       [ 0.0000e+00,  0.0000e+00,  0.0000e+00,  1.0000e+00]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 81,
    "id": "ff4ead20",
    "metadata": {},
    "outputs": [
@@ -425,8 +425,8 @@
      "output_type": "stream",
      "text": [
       "moving physical (µm) = (9112.025, 8447.4, 2440)\n",
-      "fixed physical (µm) = [9753. 7104. 2683.]\n",
-      "moved to fixed space 25.0um (390, 284, 107)\n"
+      "fixed physical (µm) = [23183. 17309.  3602.]\n",
+      "moved to fixed space 25.0um (927, 692, 144)\n"
      ]
     }
    ],
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "0055ea6f",
+   "id": "f756e587",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "02a11f17",
+   "id": "2bdf3a8a",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "01063816",
+   "id": "6055d625",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "739c84e4",
+   "id": "48859f54",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "eaefe5d1",
+   "id": "a651241f",
    "metadata": {},
    "outputs": [
     {
