Added new testing sitk script

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 88,
    "id": "e519be1c",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 89,
    "id": "2c6d0e92",
    "metadata": {},
    "outputs": [
@@ -359,28 +359,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "44710277",
+   "execution_count": 90,
+   "id": "9939a515",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2.2824079364698022,\n",
-       " 0.2117687428639336,\n",
-       " 0.06964893641226165,\n",
-       " -0.1576682158101946,\n",
-       " 2.198563605542702,\n",
-       " -0.11341482445362042,\n",
-       " 0.011176211900279023,\n",
-       " 0.09673572000392482,\n",
-       " 1.1313793308977536,\n",
-       " 951.431096094167,\n",
-       " 605.9974444399264,\n",
-       " -24.041290171400945)"
+       "(0.9471032791744767,\n",
+       " 0.08551335016526437,\n",
+       " 0.024209995326441514,\n",
+       " -0.06881144461556002,\n",
+       " 0.8992818640689881,\n",
+       " -0.044169833531642944,\n",
+       " -0.013344158172281654,\n",
+       " 0.05892992725853825,\n",
+       " 0.9453895936534932,\n",
+       " 4539.960173449378,\n",
+       " 3385.738682671216,\n",
+       " -815.9560524257133)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,20 +391,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "9bb114a1",
+   "execution_count": 84,
+   "id": "92603366",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 2.2800e+00,  2.1000e-01,  7.0000e-02,  9.5143e+02],\n",
-       "       [-1.6000e-01,  2.2000e+00, -1.1000e-01,  6.0600e+02],\n",
-       "       [ 1.0000e-02,  1.0000e-01,  1.1300e+00, -2.4040e+01],\n",
-       "       [ 0.0000e+00,  0.0000e+00,  0.0000e+00,  1.0000e+00]])"
+       "array([[ 9.50000e-01,  9.00000e-02,  2.00000e-02,  4.53996e+03],\n",
+       "       [-7.00000e-02,  9.00000e-01, -4.00000e-02,  3.38574e+03],\n",
+       "       [-1.00000e-02,  6.00000e-02,  9.50000e-01, -8.15960e+02],\n",
+       "       [ 0.00000e+00,  0.00000e+00,  0.00000e+00,  1.00000e+00]])"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 93,
    "id": "ff4ead20",
    "metadata": {},
    "outputs": [
@@ -425,8 +425,8 @@
      "output_type": "stream",
      "text": [
       "moving physical (µm) = (9112.025, 8447.4, 2440)\n",
-      "fixed physical (µm) = [23183. 17309.  3602.]\n",
-      "moved to fixed space 25.0um (927, 692, 144)\n"
+      "fixed physical (µm) = [13868. 11626.  2005.]\n",
+      "moved to fixed space 25.0um (555, 465, 80)\n"
      ]
     }
    ],
@@ -434,8 +434,8 @@
     "# goal is 271, 300, 97\n",
     "#This works!\n",
     "# user values\n",
-    "moving_index = (28037,25992,122)\n",
-    "moving_spacing = (0.325, 0.325, 20)   # µm\n",
+    "moving_index = (28037/32,25992/32,122)\n",
+    "moving_spacing = (10.4, 10.4, 20)   # µm\n",
     "\n",
     "# put them into microns\n",
     "phys_moving = (moving_index[0]*moving_spacing[0],\n",
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "f756e587",
+   "id": "6cb5272a",
    "metadata": {},
    "outputs": [
     {
@@ -471,16 +471,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "2bdf3a8a",
+   "execution_count": 92,
+   "id": "9cd0494e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "phys fixed (9555.593220786439, 5223.756026490796, 2476.476446759871)\n",
-      "fixed_index: (382, 209, 99)\n"
+      "phys fixed (13867.93356178531, 11626.417937878321, 2004.9556320272095)\n",
+      "fixed_index: (555, 465, 80)\n"
      ]
     }
    ],
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "6055d625",
+   "id": "2cc64cbb",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "48859f54",
+   "id": "7fbec2ee",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "a651241f",
+   "id": "67c6c093",
    "metadata": {},
    "outputs": [
     {
