One reg in sitk test

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 98,
    "id": "2c6d0e92",
    "metadata": {},
    "outputs": [
@@ -345,42 +345,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/DK55/DK55_Allen_25.0x25.0x25.0um.tfm\n"
+      "/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/DK55/DK55_to_Allen_affine.tfm\n"
      ]
     }
    ],
    "source": [
     "regpath = \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration\"\n",
     "moving_name = \"DK55\"\n",
-    "transform_path = os.path.join(regpath, moving_name, f\"{moving_name}_Allen_{um}x{um}x{um}um.tfm\")\n",
+    "#transform_path = os.path.join(regpath, moving_name, f\"{moving_name}_Allen_{um}x{um}x{um}um.tfm\")\n",
+    "transform_path = os.path.join(regpath, moving_name, \"DK55_to_Allen_affine.tfm\")\n",
     "print(transform_path)\n",
     "sitk_transform = sitk.ReadTransform(transform_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "9939a515",
+   "execution_count": 99,
+   "id": "4af83ce6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.9471032791744767,\n",
-       " 0.08551335016526437,\n",
-       " 0.024209995326441514,\n",
-       " -0.06881144461556002,\n",
-       " 0.8992818640689881,\n",
-       " -0.044169833531642944,\n",
-       " -0.013344158172281654,\n",
-       " 0.05892992725853825,\n",
-       " 0.9453895936534932,\n",
-       " 4539.960173449378,\n",
-       " 3385.738682671216,\n",
-       " -815.9560524257133)"
+       "(0.7899430196433067,\n",
+       " -0.25892724294511893,\n",
+       " 0.026358084908220763,\n",
+       " -0.029557349057782244,\n",
+       " 0.82513762960629,\n",
+       " -0.037050847530486396,\n",
+       " -0.010258155194592392,\n",
+       " 0.04869510622071581,\n",
+       " 0.94758146793511,\n",
+       " 3162.502608957253,\n",
+       " 3037.5022746932304,\n",
+       " -850.0003472537259)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,20 +392,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "92603366",
+   "execution_count": 100,
+   "id": "40801df9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 9.50000e-01,  9.00000e-02,  2.00000e-02,  4.53996e+03],\n",
-       "       [-7.00000e-02,  9.00000e-01, -4.00000e-02,  3.38574e+03],\n",
-       "       [-1.00000e-02,  6.00000e-02,  9.50000e-01, -8.15960e+02],\n",
-       "       [ 0.00000e+00,  0.00000e+00,  0.00000e+00,  1.00000e+00]])"
+       "array([[ 7.9000e-01, -2.6000e-01,  3.0000e-02,  3.1625e+03],\n",
+       "       [-3.0000e-02,  8.3000e-01, -4.0000e-02,  3.0375e+03],\n",
+       "       [-1.0000e-02,  5.0000e-02,  9.5000e-01, -8.5000e+02],\n",
+       "       [ 0.0000e+00,  0.0000e+00,  0.0000e+00,  1.0000e+00]])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "6cb5272a",
+   "id": "2863147f",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "9cd0494e",
+   "id": "f338b03c",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "2cc64cbb",
+   "id": "a3b42d81",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "7fbec2ee",
+   "id": "bc8591d3",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "67c6c093",
+   "id": "c9f9e961",
    "metadata": {},
    "outputs": [
     {
