Trying ants for registration

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,18 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/eddyod/programming/pipeline/src\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -57,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -310,20 +302,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "e519be1c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "spacing (25.0, 25.0, 25.0)\n",
-      "origin (0.0, 0.0, 0.0)\n",
-      "dir (1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "um = 25.0\n",
     "allen_size = (728,400,456)\n",
@@ -337,18 +319,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "2c6d0e92",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/DK55/DK55_to_Allen_affine.tfm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "regpath = \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration\"\n",
     "moving_name = \"DK55\"\n",
@@ -360,56 +334,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "4af83ce6",
+   "execution_count": null,
+   "id": "d3c1221c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.7899430196433067,\n",
-       " -0.25892724294511893,\n",
-       " 0.026358084908220763,\n",
-       " -0.029557349057782244,\n",
-       " 0.82513762960629,\n",
-       " -0.037050847530486396,\n",
-       " -0.010258155194592392,\n",
-       " 0.04869510622071581,\n",
-       " 0.94758146793511,\n",
-       " 3162.502608957253,\n",
-       " 3037.5022746932304,\n",
-       " -850.0003472537259)"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sitk_transform.GetParameters()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "40801df9",
+   "execution_count": null,
+   "id": "cefbac34",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 7.9000e-01, -2.6000e-01,  3.0000e-02,  3.1625e+03],\n",
-       "       [-3.0000e-02,  8.3000e-01, -4.0000e-02,  3.0375e+03],\n",
-       "       [-1.0000e-02,  5.0000e-02,  9.5000e-01, -8.5000e+02],\n",
-       "       [ 0.0000e+00,  0.0000e+00,  0.0000e+00,  1.0000e+00]])"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = sitk_affine_to_matrix4x4(sitk_transform)\n",
     "np.round(A,2)"
@@ -417,25 +355,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "ff4ead20",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "moving physical (µm) = (9112.025, 8447.4, 2440)\n",
-      "fixed physical (µm) = [13868. 11626.  2005.]\n",
-      "moved to fixed space 25.0um (555, 465, 80)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# goal is 271, 300, 97\n",
     "#This works!\n",
     "# user values\n",
-    "moving_index = (28037/32,25992/32,122)\n",
+    "moving_index = (1062, 1062, 130)\n",
     "moving_spacing = (10.4, 10.4, 20)   # µm\n",
     "\n",
     "# put them into microns\n",
@@ -451,40 +379,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "2863147f",
+   "execution_count": null,
+   "id": "e6eb3a56",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(9125.0, 6375.0, 2350.0)"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "phys_moving"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "f338b03c",
+   "execution_count": null,
+   "id": "ba018ae1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "phys fixed (13867.93356178531, 11626.417937878321, 2004.9556320272095)\n",
-      "fixed_index: (555, 465, 80)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# fiducial points from the moving brain\n",
     "for phys_m in [phys_moving]:\n",
@@ -496,18 +404,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "7e08f71e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fiducials_vox = np.array([(28037, 25992,122)])\n",
     "print(fiducials_vox.shape)\n",
@@ -529,39 +429,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "a3b42d81",
+   "execution_count": null,
+   "id": "94681046",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[28037, 25992,   122]])"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fiducial_indices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "bc8591d3",
+   "execution_count": null,
+   "id": "28852769",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(4405.474587253084, 4555.097711818389, 3088.2144534508207)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "moving_spacing = (0.325, 0.325, 20.0)   # microns\n",
     "moving_origin = (0.0, 0.0, 0.0)     # set from your image if available\n",
@@ -593,21 +474,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "c9f9e961",
+   "execution_count": null,
+   "id": "192f8055",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(9112.025, 8447.4, 2440.0)]"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "physical_points"
    ]
