Going back to using numpy stack

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -34,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "299762ca",
    "metadata": {},
    "outputs": [],
@@ -49,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -121,6 +129,22 @@
     "\n",
     "def sitk_affine_to_matrix4x4(tx: sitk.Transform):\n",
     "    params = list(tx.GetParameters())\n",
+    "    \n",
+    "    # First 9 values → affine matrix\n",
+    "    A = np.array(params[:9]).reshape(3,3)\n",
+    "\n",
+    "    # Last 3 values → translation\n",
+    "    t = np.array(params[9:12]).reshape(3)\n",
+    "\n",
+    "    # Build homogeneous 4×4\n",
+    "    M = np.eye(4)\n",
+    "    M[:3,:3] = A\n",
+    "    M[:3, 3] = t\n",
+    "\n",
+    "    return M\n",
+    "\n",
+    "def mat_to_matrix4x4(mat):\n",
+    "    params = list(mat.parameters)\n",
     "    \n",
     "    # First 9 values → affine matrix\n",
     "    A = np.array(params[:9]).reshape(3,3)\n",
@@ -496,6 +520,144 @@
     "allen.SetSpacing((25.0, 25.0, 25.0))\n",
     "outpath = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/Allen/ALLEN771602_25.0x25.0x25.0um_sagittal.nii'\n",
     "sitk.WriteImage(allen, outpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e259bf98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "import ants"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "46441750",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "moving_name = 'DK55'\n",
+    "um = 25.0\n",
+    "regpath = \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration\"\n",
+    "transform_path = os.path.join(regpath, moving_name, 'DK55ToAllen_affine.mat')\n",
+    "inv_transform_path = os.path.join(regpath, moving_name, 'AllenToDK55_affine.mat')\n",
+    "transform = ants.read_transform(transform_path)\n",
+    "inv_transform = ants.read_transform(inv_transform_path)\n",
+    "moving_image_path = os.path.join(regpath, moving_name, \"DK55_10.4x10.4x20um_sagittal.nii\")\n",
+    "fixed_image_path = os.path.join(regpath, \"Allen\", f\"Allen_{um}x{um}x{um}um_sagittal.nii\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "61b5bd25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi = ants.image_read(moving_image_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "faadce84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fi = ants.image_read(fixed_image_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "7206db33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi.set_spacing((0.0104, 0.0104, 0.02))\n",
+    "fi.set_spacing((0.025, 0.025, 0.025))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d6c824f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mytx = ants.registration(fixed=fi, moving=mi, type_of_transform = 'Affine' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9c5ff4ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shutil.copyfile(mytx['fwdtransforms'][0], transform_path)\n",
+    "shutil.copyfile(mytx['invtransforms'][0], inv_transform_path)\n",
+    "transform = ants.read_transform(transform_path)\n",
+    "inv_transform = ants.read_transform(inv_transform_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "54c12bdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = mat_to_matrix4x4(inv_transform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "875309a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5684.55643489, 4563.17956319, -688.49264518])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pts = (1062, 1062, 130)\n",
+    "affine_transform_point(pts, A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a519824d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9.57098007e-01,  1.10284969e-01,  2.34157983e-02, -7.11600929e-02,\n",
+       "        9.31049883e-01, -4.32332158e-02, -8.34415480e-03,  5.69186956e-02,\n",
+       "        9.52406108e-01,  4.54795166e+03,  3.65559692e+03, -8.63891602e+02])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inv_transform.parameters"
    ]
   }
  ],
