Big changes in ants reg

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "116fa24e",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e259bf98",
+   "id": "ee55de19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,8 +535,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "46441750",
+   "execution_count": 7,
+   "id": "dbeba8a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,16 +545,16 @@
     "regpath = \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration\"\n",
     "transform_path = os.path.join(regpath, moving_name, 'DK55ToAllen_affine.mat')\n",
     "inv_transform_path = os.path.join(regpath, moving_name, 'AllenToDK55_affine.mat')\n",
-    "transform = ants.read_transform(transform_path)\n",
-    "inv_transform = ants.read_transform(inv_transform_path)\n",
+    "#transform = ants.read_transform(transform_path)\n",
+    "#inv_transform = ants.read_transform(inv_transform_path)\n",
     "moving_image_path = os.path.join(regpath, moving_name, \"DK55_10.4x10.4x20um_sagittal.nii\")\n",
     "fixed_image_path = os.path.join(regpath, \"Allen\", f\"Allen_{um}x{um}x{um}um_sagittal.nii\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "61b5bd25",
+   "execution_count": 10,
+   "id": "52eb7c7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,8 +563,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "faadce84",
+   "execution_count": 8,
+   "id": "c3f68fcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,19 +573,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "7206db33",
+   "execution_count": 11,
+   "id": "5ee19469",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10.399999618530273, 10.399999618530273, 20.0)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mi.set_spacing((0.0104, 0.0104, 0.02))\n",
-    "fi.set_spacing((0.025, 0.025, 0.025))"
+    "mi.spacing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d6c824f",
+   "id": "496eca28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9c5ff4ad",
+   "id": "850f52f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "54c12bdd",
+   "id": "21b8dfb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "875309a9",
+   "id": "9d844bb3",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a519824d",
+   "id": "732b919f",
    "metadata": {},
    "outputs": [
     {
