Sitk registration and GetInverse are working with points

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -326,10 +326,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e519be1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spacing (25.0, 25.0, 25.0)\n",
+      "origin (0.0, 0.0, 0.0)\n",
+      "dir (1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0)\n"
+     ]
+    }
+   ],
    "source": [
     "um = 25.0\n",
     "allen_size = (728,400,456)\n",
@@ -343,10 +353,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2c6d0e92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/DK55/DK55_to_Allen_affine.tfm\n"
+     ]
+    }
+   ],
    "source": [
     "regpath = \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration\"\n",
     "moving_name = \"DK55\"\n",
@@ -358,10 +376,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "d3c1221c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9785826662181583,\n",
+       " -0.03130012009949313,\n",
+       " 0.0021427991318067547,\n",
+       " -0.020509349703600344,\n",
+       " 0.9395438065414903,\n",
+       " -0.00656624638812914,\n",
+       " -0.0022272573877489344,\n",
+       " -0.002521120981695857,\n",
+       " 0.9539176286796115,\n",
+       " 3938.613826881144,\n",
+       " 3492.429809833185,\n",
+       " -841.6016022787127)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sitk_transform.GetParameters()"
    ]
@@ -379,15 +419,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "ff4ead20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "moving physical (µm) = (13634.4, 6697.6, 4800.0)\n",
+      "fixed physical (µm) = [9649. 3102. 5636.]\n",
+      "moved to fixed space 25.0um (386, 124, 225)\n"
+     ]
+    }
+   ],
    "source": [
     "# goal is 271, 300, 97\n",
     "#This works!\n",
     "# user values\n",
-    "moving_index = (1062, 1062, 130)\n",
+    "moving_index = (1311.0, 644.0, 240.0)\n",
     "moving_spacing = (10.4, 10.4, 20)   # µm\n",
     "\n",
     "# put them into microns\n",
@@ -395,7 +445,7 @@
     "               moving_index[1]*moving_spacing[1],\n",
     "               moving_index[2]*moving_spacing[2])\n",
     "print(\"moving physical (µm) =\", phys_moving)\n",
-    "phys_fixed = sitk_transform.TransformPoint(phys_moving)\n",
+    "phys_fixed = sitk_transform.GetInverse().TransformPoint(phys_moving)\n",
     "print(\"fixed physical (µm) =\", np.round(phys_fixed))\n",
     "fixed_index = fixed.TransformPhysicalPointToIndex(phys_fixed)\n",
     "print(f'moved to fixed space {um}um {fixed_index}')\n"
@@ -525,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ee55de19",
+   "id": "a848441a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dbeba8a0",
+   "id": "ab29edac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "52eb7c7f",
+   "id": "6feb28c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c3f68fcd",
+   "id": "9f8e1267",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5ee19469",
+   "id": "39c80abd",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "496eca28",
+   "id": "0b4d4d29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "850f52f5",
+   "id": "fb5bb16f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "21b8dfb3",
+   "id": "979969fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "9d844bb3",
+   "id": "a55fd178",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "732b919f",
+   "id": "1ea9f105",
    "metadata": {},
    "outputs": [
     {
