--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,18 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/eddyod/programming/pipeline/src\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -42,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "299762ca",
    "metadata": {},
    "outputs": [],
@@ -57,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -167,8 +159,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "moving_name = 'MD594'\n",
-    "fixed_name = 'AtlasV8'\n",
+    "moving_name = 'MD585'\n",
+    "fixed_name = 'Allen'\n",
     "moving_all = get_origins(moving_name)\n",
     "fixed_all = get_origins(fixed_name)\n",
     "common_keys = list(moving_all.keys() & fixed_all.keys())\n",
@@ -211,6 +203,16 @@
     "# MD585 to Allen 263.31435 observations: 37\n",
     "# MD589 to Allen 260.02 observations: 37\n",
     "# MD594 to Allen 250.79 observations: 37"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f49fd61d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "0.452*32"
    ]
   },
   {
@@ -326,23 +328,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e519be1c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "spacing (25.0, 25.0, 25.0)\n",
-      "origin (0.0, 0.0, 0.0)\n",
-      "dir (1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "um = 25.0\n",
-    "allen_size = (728,400,456)\n",
+    "um = 10.0\n",
+    "allen_size = (182,1000,1140)\n",
     "fixed = sitk.Image(allen_size, sitk.sitkFloat32)\n",
     "fixed.SetOrigin((0,0,0))\n",
     "fixed.SetSpacing((um, um, um))\n",
@@ -353,55 +345,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "2c6d0e92",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/DK55/DK55_to_Allen_affine.tfm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "regpath = \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration\"\n",
     "moving_name = \"DK55\"\n",
     "#transform_path = os.path.join(regpath, moving_name, f\"{moving_name}_Allen_{um}x{um}x{um}um.tfm\")\n",
-    "transform_path = os.path.join(regpath, moving_name, \"DK55_to_Allen_affine.tfm\")\n",
+    "transform_path = os.path.join(regpath, moving_name, \"DK55_to_Allen_10.0.tfm\")\n",
     "print(transform_path)\n",
     "sitk_transform = sitk.ReadTransform(transform_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "d3c1221c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.9484996349506102,\n",
-       " 0.09333306522346545,\n",
-       " 0.019341862102055258,\n",
-       " -0.06890738794699984,\n",
-       " 0.9006745936130278,\n",
-       " -0.04685743647599427,\n",
-       " -0.009863465237201961,\n",
-       " 0.061945657691882546,\n",
-       " 0.9458820872792452,\n",
-       " 4554.1070183154325,\n",
-       " 3405.8024718170623,\n",
-       " -809.5894706549212)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sitk_transform.GetParameters()"
    ]
@@ -419,20 +381,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ff4ead20",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "moving physical (µm) = (13634.4, 6697.6, 4800.0)\n",
-      "fixed physical (µm) = [9263. 3120. 5729.]\n",
-      "moved to fixed space 25.0um (371, 125, 229)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# goal is 271, 300, 97\n",
     "#This works!\n",
@@ -574,8 +526,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "1556a381",
+   "execution_count": null,
+   "id": "0169e504",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,8 +537,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "614b168e",
+   "execution_count": null,
+   "id": "7ea263d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,8 +555,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "3b288a32",
+   "execution_count": null,
+   "id": "eb9262fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,8 +565,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "01062054",
+   "execution_count": null,
+   "id": "e83aa83f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,21 +575,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "fc14f04d",
+   "execution_count": null,
+   "id": "39466bf7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10.399999618530273, 10.399999618530273, 20.0)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mi.spacing"
    ]
@@ -645,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0c32201",
+   "id": "20e36b4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,8 +595,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "9d3719ac",
+   "execution_count": null,
+   "id": "d7d30077",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,8 +608,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "4e47c14e",
+   "execution_count": null,
+   "id": "175f670b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,21 +618,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "065ec63a",
+   "execution_count": null,
+   "id": "41f0cc6c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([5684.55643489, 4563.17956319, -688.49264518])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pts = (1062, 1062, 130)\n",
     "affine_transform_point(pts, A)"
@@ -699,23 +629,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "eb5bba01",
+   "execution_count": null,
+   "id": "dca90c7a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 9.57098007e-01,  1.10284969e-01,  2.34157983e-02, -7.11600929e-02,\n",
-       "        9.31049883e-01, -4.32332158e-02, -8.34415480e-03,  5.69186956e-02,\n",
-       "        9.52406108e-01,  4.54795166e+03,  3.65559692e+03, -8.63891602e+02])"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "inv_transform.parameters"
    ]
